# UQTOPUS

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 01_hello_uq_world.ipynb  02_random_field.ipynb  03_emulator.ipynb  04_explorer.ipynb  config_01.yml  config_03.yml  config_03_cylinder.yml
examples/templates/cavity/: log.blockMesh  log.pisoFoam
examples/templates/cavity/0.5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/1/: U  epsilon  k  nut  p  phi
examples/templates/cavity/1.5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/10/: U  epsilon  k  nut  p  phi
examples/templates/cavity/2/: U  epsilon  k  nut  p  phi
examples/templates/cavity/2.5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/3/: U  epsilon  k  nut  p  phi
examples/templates/cavity/3.5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/4/: U  epsilon  k  nut  p  phi
examples/templates/cavity/4.5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/5.5/: U  epsilon  k  nut  p  phi
examples/templates/cavity/6/: U  epsilon  k  (+3 more)
examples/templates/cavity/6.5/: U  epsilon  k  nut  p  phi
notebooks/: simple_example.ipynb
src/: __init__.py  openfoam_tools.py  template_manager.py  uq_runner.py
src/uqtopus/: __init__.py
src/uqtopus/core/: __init__.py  explorer.py  runner.py  uq_runner.py
src/uqtopus/utils/: openfoam_tools.py
templates/cavity/constant/: momentumTransport
templates/scalarTransportFoam/0/: U
templates/scalarTransportFoamVelocity/0/: U
(+37 files in other folders)
